--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,4 +1,4 @@
 ---
 linters:
     csslint:
-        ignore: 'box-sizing,universal-selector'
+        ignore: 'box-sizing,universal-selector,fallback-colors,duplicate-background-images,order-alphabetical'
